name:                ghc-dashboard
version:             0.1.0.0
synopsis:            Dashboard for GHC
homepage:            https://github.com/amir/ghc-dashboard
license:             BSD3
license-file:        LICENSE
author:              Amir M. Saeid
maintainer:          amir@glgdgt.com
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable ghc-dashboard
  main-is:             Main.hs
  build-depends:       base >=4.9          &&    <4.10
                     , mtl                 ==    2.2.1
                     , text                ==  1.2.2.1
                     , time                ==  1.6.0.1
                     , aeson               ==  1.1.0.0
                     , github              ==   0.15.0
                     , scotty              ==   0.11.0
                     , attoparsec          == 0.13.1.0
                     , bytestring          == 0.10.8.1
                     , http-types          ==    0.9.1
                     , persistent          ==      2.6
                     , persistent-sqlite   ==      2.6
                     , data-default-class  ==  0.1.2.0
                     , persistent-template ==  2.5.1.6
  hs-source-dirs:      src
  default-language:    Haskell2010

executable migrate
  main-is:             Migrate.hs
  build-depends:       base >=4.9          &&    <4.10
                     , text                ==  1.2.2.1
                     , time                ==  1.6.0.1
                     , persistent          ==      2.6
                     , persistent-sqlite   ==      2.6
                     , persistent-template ==  2.5.1.6
  hs-source-dirs:      src
  default-language:    Haskell2010

executable sync
  main-is:             Sync.hs
  build-depends:       base >=4.9          &&    <4.10
                     , mtl                 ==    2.2.1
                     , text                ==  1.2.2.1
                     , time                ==  1.6.0.1
                     , github              ==   0.15.0
                     , bytestring          == 0.10.8.1
                     , monad-logger        == 0.3.20.1
                     , transformers        ==  0.5.2.0
                     , persistent          ==      2.6
                     , persistent-sqlite   ==      2.6
                     , persistent-template ==  2.5.1.6
  hs-source-dirs:      src
  default-language:    Haskell2010
